--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
         <div class="center text-big bold">
             Hi! I am your Taleeb. Let's see how this web app goes.
         </div>
-        <script type="text/javascript" src="ui/main.js">
+        <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
 </html>
